REDO-501 Fixing overlapping filters text.

--- a/source/css/scss/app/filters.scss
+++ b/source/css/scss/app/filters.scss
@@ -176,7 +176,7 @@
   }
 
   .checkbox-input-span {
-    margin-left: 7px;
+    margin-left: 3px;
     font-size: 0.8em;
     color: #000;
     border: 0px;
@@ -207,7 +207,7 @@
   }
 
   @media #{$medium-up} {
-    padding: 0em 1rem;
+    padding: 0;
   }
 }
 
